fixed textures not fitting in 3 columns

--- a/style-customizer.css
+++ b/style-customizer.css
@@ -4,8 +4,8 @@
 }
 #customize-control-ct_tracks_background_texture_setting label {
   display: inline-block;
-  width: 79px;
-  height: 79px;
+  width: 78px;
+  height: 78px;
   margin: 0 8px 8px 0;
 }
 #customize-control-ct_tracks_background_texture_setting label:nth-child(3n + 1) {
